# Haskell-Website-Yesod

./: .codeclimate.yml  .gitignore  .travis.yml  Application.hs  Foundation.hs  Procfile  README.md  Settings.hs  Vagrantfile  build.sh  package-lock.json  package.json  stack.yaml  website.cabal
.github/workflows/: commit_jobs.yml  nodejs.yml
Handler/: Blog.hs  Common.hs  Home.hs  Projects.hs  Redirects.hs  Resume.hs  Util.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
intern-test/: intern.js  intern.json
intern-test/functional/: all.js  home.js  projects.js  resume.js  util.js
less/: blog.less  home.less  main.less  projects.less
static/css/: main.css
static/js/: main.js
templates/: default-layout-wrapper.hamlet  homepage.hamlet  homepage.julius
templates/blog/: index.hamlet  post.hamlet
test/: TestImport.hs
test/Handler/: BlogSpec.hs  CommonSpec.hs  HomeSpec.hs  ProjectsSpec.hs  RedirectsSpec.hs  ResumeSpec.hs
